Fix the illegal reflective access warning issue raised in gg-36475 by adding jvm parameters in /bin/control.sh